Improve interactions, table auto-width, and drill-down parameters.
Populate DrawnContext.dimensionValues for tables and bar charts so
OPEN/POPUP_PRESENTATION dimensionParameters (e.g. company_name →
COMPANY_NAME) reach the target presentation. Soft-render popups use the
target's own page size; the component form lists and edits per-component
interactions; tables gain horizontal cell margin defaults, All columns,
and natural-size auto-width (including headers) for layout and preview.